--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
     </label>
     <label>From: <input type="date" id="start-date"></label>
     <label>To: <input type="date" id="end-date"></label>
+    <div id="day-filter">
+      <label><input type="checkbox" value="0" checked>Sun</label>
+      <label><input type="checkbox" value="1" checked>Mon</label>
+      <label><input type="checkbox" value="2" checked>Tue</label>
+      <label><input type="checkbox" value="3" checked>Wed</label>
+      <label><input type="checkbox" value="4" checked>Thu</label>
+      <label><input type="checkbox" value="5" checked>Fri</label>
+      <label><input type="checkbox" value="6" checked>Sat</label>
+    </div>
     <button id="show-chart">Show Chart</button>
     <canvas id="chart" width="400" height="200"></canvas>
   </section>
