Restore editable weekly grid

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <span id="week-label"></span>
       <button id="next-week">&#8594;</button>
     </div>
+    <table id="heatmap"></table>
     <canvas id="overview-chart"></canvas>
     <div id="calendar"></div>
     <div id="tooltip" class="tooltip"></div>
