--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time Tracker</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -61,7 +62,7 @@
       <label><input type="checkbox" value="6" checked>Sat</label>
     </div>
     <button id="show-chart">Show Chart</button>
-    <canvas id="chart" width="400" height="200"></canvas>
+    <canvas id="chart"></canvas>
   </section>
 
   <script src="script.js"></script>
