Improve layout and ensure categories

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <button id="show-chart">Show Chart</button>
 <div id="chart-goal-container">
   <div id="chart-container">
-    <canvas id="chart" width="400" height="200"></canvas>
+    <canvas id="chart"></canvas>
   </div>
   <div id="goal-panel">
     <div id="goal-toggle">
