Add monthly goals and remove daily view

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   </div>
   <div id="goal-panel">
     <div id="goal-toggle">
-      <button data-mode="daily" class="active">Daily</button>
-      <button data-mode="weekly">Weekly</button>
+      <button data-mode="weekly" class="active">Weekly</button>
+      <button data-mode="monthly">Monthly</button>
     </div>
     <div id="goal-list"></div>
   </div>
